fixed letter cutoff

--- a/less/categories.less
+++ b/less/categories.less
@@ -27,13 +27,13 @@
 
 			h1 {
 				font-size: 22px;
+				line-height: 24px;
 				margin: 0;
 				position: absolute;
 				margin-left: 62px;
 				white-space: nowrap;
 				overflow: hidden;
 				text-overflow: ellipsis;
-				margin-right: 42px;
 				width: 85%;
 			}
 		}
